bat.string1.lessons.bat.string1.StringTimes.scala.code
def stringTimes(str:String, n:Int):String = {
  println(n*str);
}